little correction mobile-nav and pictures

--- a/style.css
+++ b/style.css
@@ -191,6 +191,10 @@ HERO SECTION
 /* ************
 INTERESTS SECTION
 ************ */
+.about div {
+    overflow: hidden;
+}
+
 .about h2{
     padding-top: 50px;
 }
@@ -199,6 +203,15 @@ INTERESTS SECTION
     height: 4px;
     width: 7%;
     margin-bottom: 20px;
+}
+
+.about img {
+    transition: 0.5s;
+}
+
+.about img:hover {
+    transform: scale(1.05);
+
 }
 
 .blog{
@@ -257,6 +270,11 @@ SKILLS SECTION
 .skills article{
     display: flex;
     justify-content: space-between;
+}
+
+.skills div i:hover {
+    transform: scale(1.3);
+    transition: .3s linear;
 }
 
 .skills article div{
@@ -396,7 +414,12 @@ footer a:hover {
         transition: 0.7s;
     }
 
-    .mobile-nav li {
+    .mobile-nav {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .mobile-nav a{
         display: block;
         width: 100%;
         max-width: 200px;
@@ -409,6 +432,13 @@ footer a:hover {
 
         color: var(--white);
         text-decoration: none;
+    }
+
+    .mobile-nav a:hover {
+        background-color: var(--white);
+        color: var(--secondary);
+        transition: 0.6s;
+        text-transform: uppercase;
     }
 
 
